--- a/popup.html
+++ b/popup.html
@@ -9,12 +9,13 @@
   <div id="main-container">
     <div id="prompt-list-container">
       <h2>Manage Prompts</h2>
-      <button id="new-prompt-button">New Prompt</button> <!-- New button added here -->
       <input type="file" id="prompt-file-input" accept=".txt,.md" multiple>
-      <button id="load-prompts-button">Load Prompts</button>
+      <button id="load-prompts-button">Import Prompts</button>
+      <button id="export-prompts-button">Export Selected Prompts</button>
+      <button id="new-prompt-button">New Prompt</button> <!-- New button added here -->
       <div id="prompt-checkbox-list"></div>
       <button id="copy-selected-prompts-button">Copy Selected Prompts</button>
-      <button id="clear-prompts-button">Clear All Prompts</button>
+      <button id="clear-prompts-button">Clear Selected Prompts</button>
       <div id="prompt-tooltip" class="hidden"></div>
     </div>
     <div id="chat-area-container">
